# RobotLearning

module_B_dl/task_1_image_recognition/: image_check.cpp  image_check.py  image_check.sh
module_B_dl/task_2_placeholder/: 教学说明.md
module_B_dl/task_2_placeholder/work_2_2_ws/devel/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
module_B_dl/task_2_placeholder/work_2_2_ws/devel/include/demo_action/: AddIntsAction.h  AddIntsActionFeedback.h  AddIntsActionGoal.h  AddIntsActionResult.h  AddIntsFeedback.h  AddIntsGoal.h  AddIntsResult.h
module_B_dl/task_2_placeholder/work_2_2_ws/devel/lib/demo_action/: action_client.py  action_server.py
module_B_dl/task_2_placeholder/work_2_2_ws/devel/lib/pkgconfig/: demo_action.pc
module_B_dl/task_2_placeholder/work_2_2_ws/src/demo_action/action/: AddInts.action
module_B_dl/task_2_placeholder/work_2_2_ws/src/demo_action/scripts/: action_client.py  action_server.py
module_B_dl/task_2_placeholder/work_2_2_ws/work_2_2_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.fish  local_setup.sh  setup.fish  setup.sh
module_B_dl/task_2_placeholder/work_2_2_ws/work_2_2_ws/src/demo_action/: CMakeLists.txt  package.xml
module_B_dl/task_2_placeholder/work_2_2_ws/work_2_2_ws/src/demo_action/scripts/: action_client.py  action_server.py
src/module_c_nav_teaching/: step.md  比赛更换内容说法.md
study/: OCR.py  g1_actions.py  instruction_parser.py  module_b_task.py  robot_action_client.py
study/samples/: operation_instruction.txt
(+52 files in other folders)
